--- a/args/gsm_cot.yaml
+++ b/args/gsm_cot.yaml
@@ -1,7 +1,7 @@
 # need 4 gpus
 
 project: coconut
-save_path: YOUR_PATH_TO_SAVE_THE_MODEL
+save_path: outputs/
 name: gsm-cot
 
 only_eval: False
@@ -22,13 +22,13 @@ model_id: openai-community/gpt2
 load_model_path: None
 seed: 0
 resume: 0
-bf16: False
+bf16: True
 train_path: data/gsm_train.json
 val_path: data/gsm_valid.json
 reset_optimizer: False
-batch_size_training: 32
+batch_size_training: 64
 debug: False
 gradient_accumulation_steps: 1
-num_epochs: 25
-lr: !!float "1e-4"
+num_epochs: 5
+lr: !!float "2e-4"
 weight_decay: 0.01
