--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "datasets==3.1.0",
+    "einops>=0.8.0",
+    "jaxtyping>=0.2.36",
     "numpy==2.1.3",
     "torch==2.5.1",
     "tqdm==4.67.0",
