--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "datasets==3.1.0",
     "einops>=0.8.0",
     "jaxtyping>=0.2.36",
+    "loguru>=0.7.3",
     "numpy==2.1.3",
     "torch==2.5.1",
     "tqdm==4.67.0",
