--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "jaxtyping>=0.2.36",
     "loguru>=0.7.3",
     "numpy==2.1.3",
+    "pandas>=2.2.3",
     "torch==2.5.1",
     "tqdm==4.67.0",
     "transformers==4.46.2",
