--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "bitsandbytes>=0.45.0",
     "datasets==3.1.0",
     "einops>=0.8.0",
     "jaxtyping>=0.2.36",
     "loguru>=0.7.3",
     "numpy==2.1.3",
     "pandas>=2.2.3",
+    "tabulate>=0.9.0",
     "torch==2.5.1",
     "tqdm==4.67.0",
     "transformers==4.46.2",
