running qwen 5 epoch 3h

--- a/args/gsm_cot_qwen.yaml
+++ b/args/gsm_cot_qwen.yaml
@@ -27,7 +27,7 @@ train_path: data/gsm_train.json
 val_path: data/gsm_valid.json
 reset_optimizer: False
 batch_size_training: 16
-debug: True
+debug: False
 gradient_accumulation_steps: 1
 num_epochs: 5
 lr: !!float "2e-4"
