--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "accelerate>=1.3.0",
     "bitsandbytes>=0.45.0",
     "datasets==3.1.0",
     "einops>=0.8.0",
