--- a/args/gsm_qwen_1.5b.yaml
+++ b/args/gsm_qwen_1.5b.yaml
@@ -2,35 +2,38 @@
 
 project: coconut
 save_path: outputs/
-name: gsm-cot-qwen
+name: gsm-qwen-1.5b
 
 only_eval: False
 
-coconut: False
-cot: True
+coconut: True
+cot: False
 no_thoughts: False
 no_cot: False
 
-c_thought: 0
+c_thought: 2
 epochs_per_stage: 1
-max_latent_stage: 0
+max_latent_stage: 3
 pad_latent_to_max: True
+replacement_method: "-1"
+# replacement_method: "0.5"
+# replacement_method: "ie+supressed[0.5:]"
+# replacement_method: "hs+supressed[0.5:]"
+# replacement_method: "supressed[-10:]"
 
-save_only_improve: True
 uniform_prob: 0.0
 model_id: Qwen/Qwen2.5-Math-1.5B
 # deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B
-load_model_path: None
+# load_model_path: None
 seed: 0
-resume: 0
+# resume: 0
 bf16: True
 train_path: data/gsm_train.json
 val_path: data/gsm_valid.json
-reset_optimizer: False
-batch_size_training: 4
+batch_size_training: 8
+max_size: 10000 # in verl this is enougth https://github.com/volcengine/verl/blob/main/examples/ppo_trainer/verl_getting_started.ipynb
 debug: False
-gradient_accumulation_steps: 1
+gradient_accumulation_steps: 4
 num_epochs: 5
-lr: !!float "2e-4"
+lr: !!float "4e-6"
 weight_decay: 0.01
-# https://qwen.readthedocs.io/en/latest/training/SFT/llama_factory.html
