--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "numpy==2.1.3",
     "pandas>=2.2.3",
     "tabulate>=0.9.0",
+    "torch-optimi>=0.2.1",
     "torch==2.5.1",
     "tqdm==4.67.0",
     "transformers==4.46.2",
