--- a/args/gsm_qwen_1.5b.yaml
+++ b/args/gsm_qwen_1.5b.yaml
@@ -15,25 +15,26 @@ c_thought: 2
 epochs_per_stage: 1
 max_latent_stage: 3
 pad_latent_to_max: True
-replacement_method: "-1"
-# replacement_method: "0.5"
+# replacement_method: "-1"
+# replacement_method: "-2"
+replacement_method: "0.5"
 # replacement_method: "ie+supressed[0.5:]"
 # replacement_method: "hs+supressed[0.5:]"
-# replacement_method: "supressed[-10:]"
+# replacement_method: "supressed[0.5:]"
 
 uniform_prob: 0.0
 model_id: Qwen/Qwen2.5-Math-1.5B
-# deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B
+# model_id: deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B
 # load_model_path: None
 seed: 0
 # resume: 0
 bf16: True
 train_path: data/gsm_train.json
 val_path: data/gsm_valid.json
-batch_size_training: 6
-max_size: 10000 # in verl this is enougth https://github.com/volcengine/verl/blob/main/examples/ppo_trainer/verl_getting_started.ipynb
+batch_size_training: 3
+max_size: 6000 # in verl 8k is enougth https://github.com/volcengine/verl/blob/main/examples/ppo_trainer/verl_getting_started.ipynb
 debug: False
-gradient_accumulation_steps: 2
-num_epochs: 5
-lr: !!float "4e-6"
-weight_decay: 0.01
+gradient_accumulation_steps: 6
+num_epochs: 20
+lr: !!float "4e-6" # 1e-4 in coconut, but 1e-6 in verl
+weight_decay: 0.001 # 0.01 in coconut, but 0.00 in verl
