--- a/args/gsm_qwen_1.5b.yaml
+++ b/args/gsm_qwen_1.5b.yaml
@@ -25,9 +25,10 @@ replacement_method: "0.5"
 uniform_prob: 0.0
 model_id: Qwen/Qwen2.5-Math-1.5B
 # model_id: deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B
-# load_model_path: None
-seed: 0
+
+# load_model_path: outputs/gsm-qwen-1.5b_20250130-193831/checkpoint_1
 # resume: 0
+seed: 0
 bf16: True
 train_path: data/gsm_train.json
 val_path: data/gsm_valid.json
