--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "tqdm==4.67.0",
     "transformers==4.46.2",
     "wandb==0.18.7",
+    "omegaconf>=2.3.0",
 ]
 
 [dependency-groups]
