vcr loss to much mem  even on bs=2

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,8 +20,8 @@
       },
       "env": {
         "DEBUG": "true",
-        "CUDA_DEVICE_ORDER": "PCI_BUS_ID",
-        "CUDA_VISIBLE_DEVICES": "1"
+        // "CUDA_DEVICE_ORDER": "PCI_BUS_ID",
+        // "CUDA_VISIBLE_DEVICES": "1"
       }
     },
     {
